# projet_meppds

./: .env.example  Dockerfile  LICENSE  README.md  code.ipynb  main.py  preprocessor.pkl  pyproject.toml  readme.md  requirements.txt  tests.ipynb  train.py
.github/workflows/: docker.yml
app/: api.py  run.sh
deployment/: deployment.yaml  deployment.yml  ingress.yml  service.yml
notebooks/: code.ipynb
src/features/: preprocess.py
src/models/: evaluate.py
src/utils/: config.py
