[project]
name = "projet-meppds"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "duckdb>=1.5.0",
    "feature-engine>=1.9.4",
    "joblib>=1.5.3",
    "mlflow>=2.20",
    "numpy>=2.4.3",
    "pandas>=2.0,<3",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.8.0",
    "skops>=0.13.0",
    "xgboost>=3.2.0",
]
