[project]
name = "projet-meppds"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "python-dotenv>=1.0.0",
    "duckdb>=1.5.0",
    "fastapi>=0.135.1",
    "feature-engine>=1.9.4",
    "joblib>=1.5.3",
    "mlflow>=2.20",
    "numpy>=2.4.3",
    "pandas>=2.0,<3",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
    "s3fs>=2026.2.0",
    "scikit-learn>=1.8.0",
    "skops>=0.13.0",
    "uvicorn>=0.42.0",
    "xgboost>=3.2.0",
]

[dependency-groups]
dev = [
    "pylint>=4.0.5",
    "ruff>=0.15.7",
]
